fix: modal is not centered

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html {
     @apply mt-2 mb-4 text-2xl italic text-red-500;
   }
   .center-modal {
-    @apply fixed transform -translate-y-1/2 top-1/2;
+    @apply fixed transform -translate-y-1/2 -translate-x-1/3 top-1/2 left-1/2;
   }
   .slideIn {
     @apply right-12;
